	* Better handling of adding "Sidebar Layout" selection to "Page Attributes" meta box on Edit Page screen, and improved security when saving.
	* Improved security for saving meta boxes using `Theme_Blvd_Meta_Box` class.
	* Improved security for saving options added to Edit Tag and Edit Category screens.
	* Improved security for saving options added to Edit Profile screen.
* Improvement: Swap TGMPA for [My Plugin Manager](http://mypluginmanager.com).
* Removed: No more support for [Theme Blvd Sliders](https://wordpress.org/plugins/theme-blvd-sliders/) plugin.
* **Important:** If you have [template part files](http://dev.themeblvd.com/tutorial/template-parts-framework-2-5/) in your child theme, they MUST be moved into a directory named `template-parts`.

--------------------------------------------------------------

2.1.13 - 09/19/2017
-------------------

* **Updated Theme Blvd framework to 2.6.12**
* Fixed: TinyMCE toolbar's dropdown menus not showing when the using Visual Editor within Theme Blvd Layout Builder.

--------------------------------------------------------------

2.1.12 - 09/11/2017
-------------------

* **Updated Theme Blvd framework to 2.6.11**
* Improvement: Sticky menu is now at 0 opacity when it's hidden for protection against systems that allow temporary scrolling past the viewport top.
* Fixed: Sticky menu and scroll effects not working in Chrome v61.
* Fixed: PHP warning from media.php, "A non-numeric value encountered."

--------------------------------------------------------------

2.1.11 - 08/07/2017
-------------------

* **Updated Theme Blvd framework to 2.6.10**
* Fixed: "Iframe" 16:9 lightbox type getting applied where it shouldn't.

--------------------------------------------------------------

2.1.10 - 08/03/2017
-------------------

* **Updated Theme Blvd framework to 2.6.9**
* Fixed: Image `srcset` property not getting printed out when featured image is linked to lightbox.
* Fixed: Minor admin styling issues with WordPress 4.8+.